IFS-2634: Changed all email signatures and contact to to Innovate UK and removed all Competitions team signature from all templates

--- a/ifs-data-layer/ifs-data-service/src/test/resources/expectedtemplates/notifications/email/finance_contact_spend_profile_available_text_html.html
+++ b/ifs-data-layer/ifs-data-service/src/test/resources/expectedtemplates/notifications/email/finance_contact_spend_profile_available_text_html.html
@@ -4,11 +4,10 @@ The finance checks for all partners in the project have now been completed. We h
 
 As the designated finance contact for your organisation, you will be responsible for completing your spend profile.
 
-If you have any other questions around these documents please contact the competitions team using the details below.
+If you have any other questions around these documents please contact Innovate UK using the details below.
 
 Yours sincerely,
 
-Competitions Team<br/>
 Innovate UK<br/>
 Tel: 0300 321 4357<br/>
 Email: competitions@innovateuk.gov.uk
