--- a/ifs-data-layer/ifs-data-service/src/test/resources/expectedtemplates/notifications/email/grant_offer_letter_project_manager_text_html.html
+++ b/ifs-data-layer/ifs-data-service/src/test/resources/expectedtemplates/notifications/email/grant_offer_letter_project_manager_text_html.html
@@ -2,11 +2,10 @@ Dear User 2,
 
 We are pleased to inform you that your grant offer letter is now ready for you to sign. This will complete the project setup stage. Please sign into your online <a href="https://ifs-local-dev">Innovate UK dashboard</a> to view the letter. Your project cannot start until this document is signed and accepted by Innovate UK.
 
-If you have any other questions around these documents please contact the competitions team using the details below.
+If you have any other questions around these documents please contact Innovate UK using the details below.
 
 Yours sincerely,
 
-Competitions Team<br/>
 Innovate UK<br/>
 Tel: 0300 321 4357<br/>
 Email: competitions@innovateuk.gov.uk
