--- a/ifs-data-layer/ifs-data-service/src/test/resources/expectedtemplates/notifications/email/new_finance_check_query_response_text_html.html
+++ b/ifs-data-layer/ifs-data-service/src/test/resources/expectedtemplates/notifications/email/new_finance_check_query_response_text_html.html
@@ -4,11 +4,10 @@ We have replied to a query regarding your finances submitted for Application 1.
 
 You can view and respond in the <a href="https://ifs-local-dev/project">project setup</a> stage for this application. Please navigate to the finance checks section.
 
-If you have any other questions please contact the competitions team using the details below.
+If you have any other questions please contact Innovate UK using the details below.
 
 Yours sincerely,
 
-Competitions Team
-Innovate UK
-Tel: 0300 321 4357
+Innovate UK<br/>
+Tel: 0300 321 4357<br/>
 Email: competitions@innovateuk.gov.uk
