--- a/ifs-data-layer/ifs-data-service/src/test/resources/expectedtemplates/notifications/email/new_finance_check_query_text_html.html
+++ b/ifs-data-layer/ifs-data-service/src/test/resources/expectedtemplates/notifications/email/new_finance_check_query_text_html.html
@@ -4,11 +4,10 @@ We have raised a query around your project finances.
 
 You can view and respond to the query in your <a href="https://ifs-local-dev/project">project setup.</a> Please sign in and navigate to the finance checks section.
 
-If you have any questions please contact the competitions team using the details below.
+If you have any questions please contact Innovate UK using the details below.
 
 Yours sincerely,
 
-Competitions Team<br/>
 Innovate UK<br/>
 Tel: 0300 321 4357<br/>
 Email: competitions@innovateuk.gov.uk
